--- a/index.html
+++ b/index.html
@@ -20,45 +20,47 @@
         </div>
     </div>
     <hr>
-    <div>
-        <h2 id = "account"> Account Overview </h2>
-    </div>
-    <div class="accountt">
-        <img src = "hachi.jpg" width = "150" alt = "hachi">
+    <div class="bigbox">
         <div>
-            <h3 id = "tnformation1"> Account Tnformation</h3>
-            <p id = "nametype"> Name : Hachiware <br> Type : Savings Account</p>
+            <div>
+                <h2 id = "account"> Account Overview </h2>
+            </div>
+            <div class="accountt">
+                <img src = "hachi.jpg" width = "150" alt = "hachi">
+                <div>
+                    <h3 id = "tnformation1"> Account Tnformation</h3>
+                    <p id = "nametype"> Name : Hachiware <br> Type : Savings Account</p>
+                </div>
+            </div>
+            <div class = "balance">
+                <img src="hachiware2.jpg" width="150" alt="hachiware2">
+                <div>
+                    <h3> Balance Information</h3>
+                    <p> Current account balance : <input type="number" id="current-account" value="0">
+                        <br> Current cash balance : <input type="number" id="current-account" value="0"></p>
+                </div>
+            </div>
+            <div class = "bank">
+                <img src="hachiware3.jpg" width="150" alt="hachiware3">
+                <div>
+                    <h3> Bank Operation</h3>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h2 id = "Financial"> Financial Tools </h2>
+            </div>
+            <div class = "currency">
+                <img src="hachimoney.jpg" width="150" alt="hachimoney">
+                <div>
+                    <h3> Currency Converter</h3>
+                    <p> Input balance : <input type="number" id="current-account" value="0"> 
+                        <br> Output balance : <input type="number" id="current-account" value="0">
+                        <br> Input currency : </p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class = "balance">
-        <img src="hachiware2.jpg" width="150" alt="hachiware2">
-        <div>
-            <h3> Balance Information</h3>
-            <p> Current account balance : <input type="number" id="current-account" value="0">
-                <br> Current cash balance : <input type="number" id="current-account" value="0"></p>
-        </div>
-    </div>
-    <div class = "bank">
-        <img src="hachiware3.jpg" width="150" alt="hachiware3">
-        <div>
-            <h3> Bank Operation</h3>
-        </div>
-    </div>
-    <div>
-        <h2 id = "Financial"> Financial Tools </h2>
-    </div>
-    <div class = "currency">
-        <img src="hachimoney.jpg" width="150" alt="hachimoney">
-        <div>
-            <h3> Currency Converter</h3>
-            <p> Input balance : <input type="number" id="current-account" value="0"> 
-                <br> Output balance : <input type="number" id="current-account" value="0">
-                <br> Input currency : </p>
-        </div>
-    </div>
-        <p>Enter number : <input type="number" id = "myinput" value="0">
-        <button onclick="add()">+1</button>
-        <button onclick="low()">-1</button>
-        <script src="script.js"></script></p>
 </body>
 </html>
