--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </div>
     </div>
     <hr>
+    <textarea name="" id="area"></textarea>
     <div class="bigbox">
-        <div>
+        <div class="smallbox1">
             <div>
                 <h2 id = "account"> Account Overview </h2>
             </div>
@@ -47,7 +48,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="smallbox2">
             <div>
                 <h2 id = "Financial"> Financial Tools </h2>
             </div>
