--- a/index.html
+++ b/index.html
@@ -38,13 +38,20 @@
                 <div>
                     <h3> Balance Information</h3>
                     <p> Current account balance : <input type="number" id="current-account" value="0">
-                        <br> Current cash balance : <input type="number" id="current-account" value="0"></p>
+                    <br> Current cash balance : <input type="number" id="current-account" value="0"><br>
+                    <button id="setbalance" onclick="updatebalance()"> Change </button></p>
                 </div>
             </div>
             <div class = "bank">
                 <img src="hachiware3.jpg" width="150" alt="hachiware3">
                 <div>
                     <h3> Bank Operation</h3>
+                    <select id="togglebtn">
+                        <option value="deposit"> Deposit </option>
+                        <option value="withdraw"> Withdraw </option>
+                    </select>
+                    <input type="number" id="opAmount" >
+                    <button id="setbalance" onclick="updatebalance()"> Proceed </button>
                 </div>
             </div>
         </div>
@@ -58,7 +65,11 @@
                     <h3> Currency Converter</h3>
                     <p> Input balance : <input type="number" id="current-account" value="0"> 
                         <br> Output balance : <input type="number" id="current-account" value="0">
-                        <br> Input currency : </p>
+                        <br> Input currency : <select id="choosecurrency">
+                            <option value="USD"> USD </option>
+                            <option value="THB"> THB </option></select>
+                            <button id="setcurrency" onclick="updatecurrency()"> Convert </button>
+                    </p>
                 </div>
             </div>
         </div>
