--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         </div>
     </div>
     <hr>
-    <textarea name="" id="area"></textarea>
+    <div class="textarea">
+        <textarea name="" id="area"></textarea>
+    </div>
     <div class="bigbox">
-        <div class="smallbox1">
+        <div class="smallbox">
             <div>
                 <h2 id = "account"> Account Overview </h2>
             </div>
@@ -55,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <div class="smallbox2">
+        <div class="smallbox">
             <div>
                 <h2 id = "Financial"> Financial Tools </h2>
             </div>
