--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
                 <h2 id = "account"> Account Overview </h2>
             </div>
             <div class="accountt">
-                <img src = "hachi.jpg" width = "180" alt = "hachi">
+                <img src = "hachi.jpg" width = "150" alt = "hachi">
                 <div>
                     <h3 id = "tnformation1"> Account Tnformation</h3>
                     <p id = "nametype"> Name : Hachiware <br> Type : Savings Account</p>
                 </div>
             </div>
             <div class = "balance">
-                <img src="hachiware2.jpg" width="170" alt="hachiware2">
+                <img src="hachii.jpg" width="150" alt="hachii">
                 <div>
                     <h3> Balance Information</h3>
-                    <p> Current account balance : <input type="number" id="current-account" value="0">
-                    <br> Current cash balance : <input type="number" id="current-account" value="0"><br>
+                    <p> Current account balance : <input type="number" id="current-account" value="0"></p>
+                     <p> Current cash balance : <input type="number" id="current-account" value="0"></p>
                     <button id="setbalance" onclick="updatebalance()"> Change </button></p>
                 </div>
             </div>
             <div class = "bank">
-                <img src="hachiware3.jpg" width="170" alt="hachiware3">
+                <img src="hachiware3.jpg" width="150" alt="hachiware3">
                 <div>
                     <h3> Bank Operation</h3>
                     <select id="togglebtn">
@@ -66,16 +66,16 @@
                 <h2 id = "Financial"> Financial Tools </h2>
             </div>
             <div class = "currency">
-                <img src="hachimoney.jpg" width="180" alt="hachimoney">
+                <img src="hachimoney.jpg" width="150" alt="hachimoney">
                 <div>
                     <h3> Currency Converter</h3>
-                    <p> Input balance : <input type="number" id="current-account" value="0"> 
-                        <br> Output balance : <input type="number" id="current-account" value="0">
-                        <br> Input currency : <select id="choosecurrency">
+                    <p> Input balance : <input type="number" id="current-account" value="0"> </p>
+                    <p> Output balance : <input type="number" id="current-account" value="0"></p>
+                        <p> Input currency : <select id="choosecurrency">
                             <option value="USD"> USD </option>
                             <option value="THB"> THB </option></select>
                             <button  id="setcurrency" onclick="updatecurrency()"> Convert </button>
-                    </p>
+                        </p>
                 </div>
             </div>
         </div>
