--- a/index.html
+++ b/index.html
@@ -33,23 +33,33 @@
                 <h2 id = "account"> Account Overview </h2>
             </div>
             <div class="accountt">
-                <img src = "hachi.jpg" width = "150" alt = "hachi">
+                <div class="icon">
+                    <br>
+                    <img src = "hachi.jpg" width = "150" alt = "hachi">
+                </div>
                 <div>
                     <h3 id = "tnformation1"> Account Tnformation</h3>
                     <p id = "nametype"> Name : Hachiware <br> Type : Savings Account</p>
                 </div>
             </div>
             <div class = "balance">
-                <img src="hachii.jpg" width="150" alt="hachii">
+                <div class="icon">
+                    <br>
+                    <br>
+                    <img src="hachiware2.jpg" width="150" alt="hachiware2">
+                </div>
                 <div>
                     <h3> Balance Information</h3>
                     <p> Current account balance : <input type="number" id="current-account" value="0"></p>
-                     <p> Current cash balance : <input type="number" id="current-account" value="0"></p>
-                    <button id="setbalance" onclick="updatebalance()"> Change </button></p>
+                     <p> Current cash balance : <input type="number" id="current-cash" value="0"></p>
+                    <button id="setbalance" onclick="setbalance()"> Change </button></p>
                 </div>
             </div>
             <div class = "bank">
-                <img src="hachiware3.jpg" width="150" alt="hachiware3">
+                <div class="icon">
+                    <br>
+                    <img src="hachiware3.jpg" width="150" alt="hachiware3">
+                </div>
                 <div>
                     <h3> Bank Operation</h3>
                     <select id="togglebtn">
@@ -66,7 +76,11 @@
                 <h2 id = "Financial"> Financial Tools </h2>
             </div>
             <div class = "currency">
-                <img src="hachimoney.jpg" width="150" alt="hachimoney">
+                <div class="icon">
+                    <br>
+                    <br>
+                    <img src="hachimoney.jpg" width="150" alt="hachimoney">
+                </div>
                 <div>
                     <h3> Currency Converter</h3>
                     <p> Input balance : <input type="number" id="current-account" value="0"> </p>
@@ -80,5 +94,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
