--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <br>
     <div class="textarea">
-        <textarea name="" id="area"></textarea>
+        <textarea disabled name="" id="area"></textarea>
     </div>
     <br>
     <br>
@@ -67,7 +67,7 @@
                         <option value="withdraw"> Withdraw </option>
                     </select>
                     <input type="number" id="opAmount" >
-                    <button id="setbalance" onclick="updatebalance()"> Proceed </button>
+                    <button id="setbalance" onclick="bankOperation()"> Proceed </button>
                 </div>
             </div>
         </div>
